# beam-init

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  README  README.md  SECURITY.md  clippy.toml  init.Dockerfile  raw.Dockerfile  rust-toolchain.toml  test.Dockerfile  zombie.py
.github/workflows/: ci.yml  release.yaml  zizmor.yml
crates/docker_harness/: Cargo.toml
crates/docker_harness/src/: lib.rs
docs/: architecture.md
src/: api.rs  api_impl.rs  fdstore.rs  lib.rs  logs.rs  main.rs  services.rs  signal_stream.rs
src/system/: fork.rs  mod.rs  pidfd.rs  pty.rs  signal_set.rs  unix_socket.rs
tests/: api_freeze_thaw_parent_with_different_pgid.py  api_freeze_thaw_service.py  api_list_services.py  api_liveness_http_server.py  api_liveness_max_retries.py  api_non_existent_service.py  api_readiness_http_server.py  api_restart_service.py  api_service_logs.py  api_show_service.py  api_start_invalid_service.py  api_start_service.py  api_stop_service.py  api_stop_service_wrong_user.py  basic.rs  environment_file.py  init_reaps_zombies.py  init_script.py  init_script.sh  parent_with_child_pgid.py  process_group_kill.py
