[workspace]
members = ["crates/docker_harness"]

[package]
name = "beam-init"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json"] }

# serde
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# rust-lang
libc = "0.2.185"

# tokio
axum = { version = "0.8.9", default-features = false, features = ["tokio", "http1", "json"] }
tokio = { version = "1.52.1", features = ["io-util", "macros", "net", "rt", "sync"] }

[dev-dependencies]
docker_harness = { path = "crates/docker_harness" }

[lints.clippy]
missing_safety_doc = "warn"
undocumented_unsafe_blocks = "warn"
